[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gingertree"
version = "0.14.1"
description = "Format conversion and graphical representation of [Universal Dependencies](http://universaldependencies.org) trees."
license = {text = "MIT"}
authors = [{name = "Loïc Grobol", email = "loic.grobol@gmail.com"}]
keywords = [
    "nlp",
    "syntax",
    "universal dependencies",
]
urls = {Homepage = "https://github.com/LoicGrobol/ginger"}
requires-python = ">= 3.8"
dependencies = ["docopt-ng >= 0.6"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
images = ["pycairo >= 1.15.10"]

[project.scripts]
ginger = "ginger.main:main_entry_point"

[tool.setuptools]
packages = ["ginger"]

