[metadata]
name = ginger
version = attr: ginger.__version__
description = Format conversion and graphical representation of [Universal Dependencies](http://universaldependencies.org) trees.
url = https://github.com/LoicGrobol/ginger
license = MIT
author = Loïc Grobol
author_email=loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Environment :: Console
keywords =
    nlp
    syntax
    universal dependencies

[options]
packages = ginger
install_requires =
    docopt
    pycairo

[options.entry_points]
console_scripts =
    ginger = ginger.ginger:main_entry_point

[pycodestyle]
max-line-length = 100
ignore = E226
