[metadata]
name = gingertree
version = 0.14.0.dev0
description = Format conversion and graphical representation of [Universal Dependencies](http://universaldependencies.org) trees.
url = https://github.com/LoicGrobol/ginger
license = MIT
author = Loïc Grobol
author_email=loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
keywords =
    nlp
    syntax
    universal dependencies

[options]
packages = ginger
python_requires = >= 3.7
install_requires =
    docopt-ng >= 0.6

[options.extras_require]
    images =
        pycairo >= 1.15.10

[options.entry_points]
console_scripts =
    ginger = ginger.main:main_entry_point

[pycodestyle]
max-line-length = 100
ignore = E226, W503

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
allow_redefinition = True